--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     </div>
     
     <footer>
-        &copy; 2025 Taligaman National High School. Research Office.
+        &copy; 2025 Taligaman National High School
     </footer>
 
     <script>
