--- a/index.html
+++ b/index.html
@@ -396,46 +396,25 @@
                 <tbody>
                     <tr>
                         <td data-label="Research Title">
-                            Understanding ICT Students' Behavior on Mobile Legends: Bang Bang in Taligaman National High School
+                            Parental Expectations and their Impact on Grade 11 and 12 HumSS Student’s Academic Performance
                         </td>
                         <td data-label="Authors">
-                            James E. Rosales, Jane C. Rosales, John Ray S. Subrastas
+                            Arienza, Jeanneth, Belandres, Danica, Dela Peña, Alyanna Anika, Del Rosario, Richard, Jasma, Shalom Andres Matthew, Jayme, Cherlyn, Manzo, Mary Joy, Simagala, Gerlie, Timcang, Jerold
                         </td>
                         <td data-label="Year">2025</td>
                         <td data-label="Abstract" class="abstract-cell">
-                            <p class="summary">This study explores the behavioral patterns of ICT students in relation to Mobile Legends: Bang Bang, investigating playing frequency, motivations, and impact on academic performance. Findings suggest the game is a source of entertainment and social bonding, but calls for digital wellness education.</p>
-                            <p class="keywords">Keywords: Mobile Legends: Bang Bang, ICT students, gaming behavior, academic impact, digital wellness</p>
+                            <p class="summary">This study examines how **Parental Expectations** influence the **Academic Performance** of Grade 11 and 12 HumSS students, using the Expectancy-Value Theory as its framework. High parental expectations are linked to increased academic achievement.</p>
+                            <p class="keywords">Keywords: Parental Expectations, HumSS Students, Academic Performance, Expectancy-Value Theory, Student Motivation</p>
                             <button class="abstract-toggle" onclick="openAbstractModal(this)">Show Abstract</button>
                             <div class="full-abstract">
-                                Abstract: This study explores the behavioral patterns of ICT students at Taligaman National High School in relation to their engagement with the popular mobile game Mobile Legends: Bang Bang. Using a mixed-methods research design, the study investigates students’ playing frequency, motivations, in-game spending habits, social interactions, and the potential impact of gameplay on their academic performance and daily routines. Data were gathered through survey questionnaires, focus group discussions, and informal interviews. Findings reveal that most ICT students view the game as a primary source of entertainment and social bonding, though excessive gameplay is associated with reduced study time and occasional classroom distractions. The study highlights the need for balanced gaming habits and recommends the integration of digital wellness education to promote responsible gaming behavior among students.
-                            </div>
-                        </td>
-                        <td data-label="Full Manuscript">
-                            <a href="https://drive.com/c/6929158b-79ec-8326-ac3c-91d4406cdb07" target="_blank" class="manuscript-link">View Full Text <i class="fas fa-external-link-alt"></i></a>
-                        </td>
-                    </tr>
-
-                    <tr>
-                        <td data-label="Research Title">
-                            Digital Literacy Levels and Challenges Among Junior High School Teachers
-                        </td>
-                        <td data-label="Authors">
-                            Dr. Amelia R. Diaz
-                        </td>
-                        <td data-label="Year">2023</td>
-                        <td data-label="Abstract" class="abstract-cell">
-                            <p class="summary">Assessing the digital literacy competency of JHS teachers, identifying key challenges in technology integration, and proposing targeted professional development interventions to enhance instructional strategies.</p>
-                            <p class="keywords">Keywords: Digital Literacy, JHS Teachers, Technology Integration, Professional Development, Educational Technology</p>
-                            <button class="abstract-toggle" onclick="openAbstractModal(this)">Show Abstract</button>
-                            <div class="full-abstract">
-                                Abstract: This survey-based research utilized a descriptive approach to measure the current digital literacy levels among Junior High School teachers at TNHS. Results indicated high proficiency in basic computing but moderate competency in advanced tools for instruction and assessment. The primary challenge identified was lack of time for continuous learning and outdated equipment. The study concludes with a recommendation for a mandatory, incentivized technology skills enhancement program focusing on cloud tools and AI literacy.
+                                Abstract: This study will anchor Expectancy-value Theory that was developed by Atkinson, 1964 and was further developed by Eccles, 1984; Wigfield & Eccles, 2000. A theory of motivation that describes the parental expectations and their impact among student's achievements. This theory suggests that an individual’s motivation to achieve is determined by their expectations for success and the value they place on the task. Parental expectations can influence a student's self-expectations and motivation. High parental expectations often lead students to value academic success more, thus enhancing their academic achievements. By applying this theory, the researcher aims to explore the relationship of parental expectations of Grade 11 and 12 HUMSS students and their academic achievement.
                             </div>
                         </td>
                         <td data-label="Full Manuscript">
                             <a href="#" target="_blank" class="manuscript-link">View Full Text <i class="fas fa-external-link-alt"></i></a>
                         </td>
                     </tr>
-                </tbody>
+                    </tbody>
             </table>
         </section>
     </main>
@@ -473,7 +452,7 @@
                 const searchableCells = [
                     tr[i].getElementsByTagName("td")[0], 
                     tr[i].getElementsByTagName("td")[1], 
-                    tr[i].getElementsByTagName("td")[3]  
+                    tr[i].getElementsByTagName("td")[3] 
                 ];
                 
                 searchableCells.forEach(cell => {
