--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         </td>
                         <td data-label="Year">2025</td>
                         <td data-label="Abstract" class="abstract-cell">
-                            <p class="summary">This study examines how **Parental Expectations** influence the **Academic Performance** of Grade 11 and 12 HumSS students, using the Expectancy-Value Theory as its framework. High parental expectations are linked to increased academic achievement.</p>
+                            <p class="summary">This study examines how Parental Expectations influence the Academic Performance of Grade 11 and 12 HumSS students, using the Expectancy-Value Theory as its framework. High parental expectations are linked to increased academic achievement.</p>
                             <p class="keywords">Keywords: Parental Expectations, HumSS Students, Academic Performance, Expectancy-Value Theory, Student Motivation</p>
                             <button class="abstract-toggle" onclick="openAbstractModal(this)">Show Abstract</button>
                             <div class="full-abstract">
