--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                             Parental Expectations and their Impact on Grade 11 and 12 HumSS Student’s Academic Performance
                         </td>
                         <td data-label="Authors">
-                            Arienza, Jeanneth, Belandres, Danica, Dela Peña, Alyanna Anika, Del Rosario, Richard, Jasma, Shalom Andres Matthew, Jayme, Cherlyn, Manzo, Mary Joy, Simagala, Gerlie, Timcang, Jerold
+                            Arienza J., Belandres D., Dela Peña A. A., Del Rosario R., Jasma S. A. M., Jayme C., Manzo M. J., Simagala G., Timcang J.
                         </td>
                         <td data-label="Year">2025</td>
                         <td data-label="Abstract" class="abstract-cell">
